setup Dockerfile and docker-compose for the services

--- a/movie-catalog-service/src/main/resources/application.properties
+++ b/movie-catalog-service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 # the app runs on port 8081
 server.port=8081
 spring.application.name=movie-catalog-service
+# remove this line if you want to use the default eureka server on localhost
+eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
