--- a/movie-info-service/src/main/resources/application.properties
+++ b/movie-info-service/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 # app runs on port to 8081
 server.port=8082
 spring.application.name=movie-info-service
+# remove this line if you want to use the default eureka server on localhost
+eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
