--- a/rating-data-service/src/main/resources/application.properties
+++ b/rating-data-service/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # the app is running on port 8083
 server.port=8083
 spring.application.name=ratings-data-service
+eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
