--- a/rating-data-service/src/main/resources/application.properties
+++ b/rating-data-service/src/main/resources/application.properties
@@ -4,3 +4,17 @@ spring.application.name=ratings-data-service
 eureka.client.serviceUrl.defaultZone=http://host.docker.internal:8761/eureka/
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
+
+# Postgres Database configuration
+spring.datasource.url=jdbc:postgresql://host.docker.internal:5432/service-database
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=none
+
+# Flyway configuration
+spring.flyway.url=jdbc:postgresql://host.docker.internal:5432/service-database
+spring.flyway.user=admin
+spring.flyway.password=password
+spring.flyway.locations=classpath:db/migration
